--- a/code/image.ipynb
+++ b/code/image.ipynb
@@ -6,11 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scanpy as sc\n",
+    "# import scanpy as sc\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import plotly.express as px\n",
+    "from cluster import spatial_cells\n",
     "\n",
-    "adata = sc.read(\"../data/adata_umap.h5ad\")\n",
+    "# adata = sc.read(\"../data/adata_umap.h5ad\")\n",
     "coords = pd.read_csv('../data/cell_coordinates.csv')\n",
     "coords['cluster'] = np.array(coords['cluster']).astype('str')"
    ]
@@ -21,20 +23,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.express as px\n",
-    "import pandas as pd\n",
-    "\n",
     "\n",
     "cluster_type = [\"14\"]\n",
+    "if cluster_type is [\"-1\"]:\n",
+    "    cluster_type = coords['cluster'].unique()\n",
     "\n",
-    "\n",
-    "fig = px.scatter_3d(coords[coords['cluster'].isin(cluster_type)], x = 'x', y = 'y', z = 'z', color = 'cluster', title = 'Interactive 3D Scatter',\n",
-    "                    opacity = 0.7)\n",
+    "fig = px.scatter_3d(coords[coords['cluster'].isin(cluster_type)], x = 'x', y = 'y', z = 'z', \n",
+    "                    color = 'cluster', title = 'Interactive 3D Scatter', opacity = 0.7)\n",
     "fig.update_traces(marker = dict(size = 1))\n",
     "\n",
     "fig.update_layout(\n",
-    "    scene = dict(\n",
-    "        xaxis = dict(range = [-100, 1400]),\n",
+    "    scene = dict( # set according to the data\n",
+    "        xaxis = dict(range = [-100, 1400]), \n",
     "        yaxis = dict(range = [-100, 1400]),\n",
     "        zaxis = dict(range = [-100, 700])\n",
     "    )\n",
@@ -45,7 +45,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "code",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
